ERROR FIXED: project title not showing at top error is fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -650,7 +650,7 @@ header {
 
   &__list li {
     @include task-item();
-    padding: 0;
+    padding: 7px;
 
     div:nth-child(1) {
       padding: 10px;
@@ -678,6 +678,8 @@ header {
 .project-overlay {
   @include box-overlay();
   background-color: white;
+  width: 200px;
+  right: 0;
 
   @include mq("900px") {
     width: 200px;
